fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
 
 main {
   position: relative;
+  overflow-x: hidden;
+
 }
 
 h1{
